# review-predictions-model

./: .dockerignore  Dockerfile  README.md  pyproject.toml  tfidf_vectorizer.pkl
infra/: Pulumi.review-predictions.yaml  Pulumi.yaml  index.ts  package-lock.json
review-predictionkyapbwefxcmy/serving/: serve.py
review-predictionkyapbwefxcmy/training/: train.py
review-predictionkyapbwefxcmy/utils/: utils.py
tests/: test_review-prediction.py
