[tool.poetry]
name = "review-predictionkyapbwefxcmy"
version = "0.1.0"
description = "My Model contains all the boilerplate you need to train and deploy a model."
authors = ["Edward Jin <ejscfj@gmail.com>"]
packages = [{include = "review-predictionkyapbwefxcmy"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
mlflow = "^2.18.0"
scikit-learn = "1.5.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
dvc = {extras = ["azure"], version = "^3.56.0"}
boto3 = "1.17.49"
azure-storage-blob = "^12.24.0"
azure-identity = "^1.19.0"
xgboost = "^2.1.3"
imbalanced-learn = "^0.12.4"
joblib = "^1.4.2"

[tool.poetry.scripts]
train = "review-predictionkyapbwefxcmy.training.train:main"
serve = "review-predictionkyapbwefxcmy.serving.serve:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
